--- a/misc/xca.wxs
+++ b/misc/xca.wxs
@@ -47,11 +47,6 @@
         <DirectoryRef Id="INSTALLDIR">
             <Component Id="Cxca.exe" Guid="af105c5b-0333-4931-819d-ea109af1234b">
                 <File Id="xca.exe" Source="xca.exe" KeyPath="yes"/>
-                <Shortcut Id="ApplicationStartMenuShortcut"
-                          Name="XCA"
-                          Description="X Certificate and key management"
-                          Target="[#xca.exe]"
-                          WorkingDirectory="INSTALLDIR"/>
                 <ProgId Id="XCA.Database" Description="XCA Database" Icon="xca.exe">
                     <Extension Id="xdb" ContentType="application/x-xca-database">
                         <Verb Id="open" Command="Open" TargetFile="xca.exe" Argument="&quot;%1&quot;" />
@@ -105,9 +100,6 @@
             <Component Id="Clibgcc_s_seh1" Guid="f5c27ddf-a2e1-49e2-9f24-fbf97bc5cb70">
                 <File Id="libgcc_s_seh1.dll" Source="libgcc_s_seh-1.dll" KeyPath="yes"/>
             </Component>
-            <Component Id="Clibcrypto11x64" Guid="44133d17-96b5-4aee-8a24-9c722482add5">
-                <File Id="libcrypto11x64.dll" Source="libcrypto-1_1-x64.dll" KeyPath="yes"/>
-            </Component>
             <Component Id="CQt5Core" Guid="561efd92-0fc8-4e2d-abe8-6ba16fc8bacd">
                 <File Id="Qt5Core.dll" Source="Qt5Core.dll" KeyPath="yes"/>
             </Component>
@@ -126,31 +118,6 @@
             <Component Id="Ccopyright.rtf" Guid="83c15eef-0d1a-43a4-a0f7-1b90d0784712">
                 <File Id="copyright.rtf" Source="$(var.CPACK_WIX_LICENSE_RTF)" KeyPath="yes"/>
             </Component>
-
-<!--
-            <Component Id="Clibpq" Guid="f243d4ea-d51d-42fc-a3c0-4eb186c55d34">
-                <File Id="libpq.dll" Source="libpq.dll" KeyPath="yes"/>
-            </Component>
-                <File Id="libssl11x64.dll" Source="$(var.OPENSSL_INCLUDE_DIR)/../libssl-1_1-x64.dll" KeyPath="yes"/>
-            </Component>
-        <Component Id="Clibiconv2" Guid="6ef1f17c-8771-4ace-84f0-799d53062ec1">
-                <File Id="libiconv2.dll" Source="libiconv-2.dll" KeyPath="yes"/>
-            </Component>
-            <Component Id="Clibintl8" Guid="64455f86-1d00-4cac-b0ce-f1a8d0f13bce">
-                <File Id="libintl8.dll" Source="libintl-8.dll" KeyPath="yes"/>
-            </Component>
-            <Component Id="Cmsvcp140" Guid="00d0d452-5bd9-41f4-873c-f7e034cc4332">
-                <File Id="msvcp140.dll" Source="msvcp140.dll" KeyPath="yes"/>
-            </Component>
-            <Component Id="Cvcruntime140" Guid="f0b03b2a-14f7-4631-bfe3-d4c6c9b57e1d">
-                <File Id="vcruntime140.dll" Source="vcruntime140.dll" KeyPath="yes"/>
-            </Component>
-
-            <Component Id="Clibmysql" Guid="9c9d150d-8a36-4cb7-956e-e70258227b3f">
-                <File Id="libmysql.dll" Source="libmysql.dll" KeyPath="yes"/>
-            </Component>
-     -->
-
             <Component Id="RegistryEntries" Guid="61976812-eb40-4133-8ae0-7956e9e67719">
                 <RegistryValue Id="RegInstallDir" Root="HKLM" Key="Software\xca"
                                Name="Install_Dir64" Type="string" Value="[INSTALLDIR]"
@@ -169,14 +136,6 @@
             <Component Id="Cqsqlite" Guid="6a039415-5278-424a-99b5-fc81b959a829">
                 <File Id="qsqlite.dll" Source="sqldrivers/qsqlite.dll" KeyPath="yes"/>
             </Component>
-        <!--
-            <Component Id="Cqsqlmysql" Guid="4cf3f2cf-8a22-4479-8ed6-24f96e8f9480">
-                <File Id="qsqlmysql.dll" Source="sqldrivers/qsqlmysql.dll"/>
-            </Component>
-            <Component Id="Cqsqlpsql" Guid="526161ae-1023-411e-b7a1-747c93923b31">
-                <File Id="qsqlpsql.dll" Source="sqldrivers/qsqlpsql.dll"/>
-            </Component>
-            -->
             <Component Id="Cqsqlodbc" Guid="c5dca3b3-d6f1-4012-8108-5c7516bd48a9">
                 <File Id="qsqlodbc.dll" Source="sqldrivers/qsqlodbc.dll"/>
             </Component>
@@ -189,8 +148,12 @@
         </DirectoryRef>
 
         <DirectoryRef Id="ApplicationProgramsFolder">
-            <Component Id="ApplicationUninstall"
-                       Guid="ec8d67e2-c5ef-40e1-8bd1-691abaa5e158" KeyPath="no">
+            <Component Id="ApplicationShortcut" Guid="391c2a6f-bfe2-46e3-bcec-0e9413070696">
+                <Shortcut Id="ApplicationStartMenuShortcut"
+                          Name="XCA"
+                          Description="X Certificate and Key management"
+                          Target="[#xca.exe]"
+                          WorkingDirectory="INSTALLDIR"/>
                 <Shortcut Id="UninstallXCA"
                           Name="Uninstall XCA"
                           Description="Uninstalls XCA"
@@ -200,14 +163,13 @@
                 <RegistryValue Root="HKCU" Key="Software\xca" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
             </Component>
         </DirectoryRef>
-
         <UI>
             <UIRef Id="WixUI_Mondo" />
             <UIRef Id="WixUI_ErrorProgressText" />
             <Publish Dialog="ExitDialog" Control="Finish" Event="DoAction"
                      Value="LaunchApplication">WIXUI_EXITDIALOGOPTIONALCHECKBOX = 1 and NOT Installed</Publish>
         </UI>
-	<Property Id="WIXUI_EXITDIALOGOPTIONALTEXT" Value="Enjoy XCA and free Software." />
+        <Property Id="WIXUI_EXITDIALOGOPTIONALTEXT" Value="Enjoy XCA and free Software." />
         <Property Id="WIXUI_EXITDIALOGOPTIONALCHECKBOX" Value="1"/>
         <Property Id="WIXUI_EXITDIALOGOPTIONALCHECKBOXTEXT" Value="Run XCA now" />
         <CustomAction Id="LaunchApplication"
@@ -231,7 +193,7 @@
             <ComponentRef Id="CQt5Widgets"/>
             <ComponentRef Id="CQt5Help"/>
             <ComponentRef Id="Ccopyright.rtf"/>
-            <ComponentRef Id="ApplicationUninstall" />
+            <ComponentRef Id="ApplicationShortcut" />
             <ComponentRef Id="RegistryEntries" />
         </ComponentGroup>
 
@@ -243,38 +205,11 @@
                 <ComponentGroupRef Id="GroupI18n" />
                 <ComponentGroupRef Id="GroupMisc" />
             </Feature>
-            <Feature Id="FileAssociations" Title="File Associations" Level="1"
-                     Description="PKI and XCA file associations like .xdb .pem .pfx .crt .crl .p12">
-                <ComponentRef Id="Cxca.exe" />
-            </Feature>
             <Feature Id="Documentation" Title="Documentation" Level="1"
                      Description="The HTML documentation and changelog file.">
                 <ComponentGroupRef Id="GroupDocumentation" />
             </Feature>
-            <Feature Id="Databases" Title="Database Drivers"
-                     Description="All remote database drivers. The file based SQLite driver will be always installed." Level="1">
-                <Feature Id="SqlOdbc" Title="ODBC SQL Driver" Level="1"
-                         Description="Access to ODBC databases like Microsoft SQL Server">
-                    <ComponentRef Id="Cqsqlodbc" />
-                </Feature>
-<!--
-                <Feature Id="SqlMariaDB" Title="MySQL / MariaDB SQL Driver" Level="100"
-                         Description="Native support for MySQL and MariaDB databases. Contains 3rd party DLLs">
-                    <ComponentRef Id="Cqsqlmysql" />
-                    <ComponentRef Id="Clibmysql" />
-                </Feature>
-                <Feature Id="SqlPostgres" Title="PostgreSQL Driver" Level="100"
-                         Description="Native support for PostgreSQL databases. Contains 3rd party DLLs">
-                   <ComponentRef Id="Cqsqlpsql" />
-                    <ComponentRef Id="Clibpq" />
-                    <ComponentRef Id="Clibssl11x64" />
-                    <ComponentRef Id="Clibiconv2" />
-                    <ComponentRef Id="Clibintl8" />
-                    <ComponentRef Id="Cmsvcp140" />
-                    <ComponentRef Id="Cvcruntime140" />
-                </Feature>
--->
-            </Feature>
+            <FeatureGroupRef Id="DatabaseGroup" />
         </Feature>
         <?include "properties.wxi"?>
 
