Close #287: template don't save/restore correctly
Use the probably modified internal name of the template
in the template-details dialog before import.

Therefore the name of the qlineedit of the internal name of
all other details dialogs changed from "descr" to "description"
to match the name in the NewX509 dialog and to be found
by the "XcaDetails" class.

When exporting the template data, add the internal name and the comment
to the exported data.
The XCA template data is defined by us and can be modified.
This change is backwards and upwards compatible:
  New versions of XCA can read an old Template export and vice-versa.

--- a/ui/CertDetail.ui
+++ b/ui/CertDetail.ui
@@ -108,7 +108,7 @@
            </widget>
           </item>
           <item row="0" column="1">
-           <widget class="QLineEdit" name="descr">
+           <widget class="QLineEdit" name="description">
             <property name="toolTip">
              <string>The internal name of the certificate in the database</string>
             </property>
