--- a/ui/CrlDetail.ui
+++ b/ui/CrlDetail.ui
@@ -179,7 +179,7 @@
            </widget>
           </item>
           <item row="0" column="1">
-           <widget class="QLineEdit" name="descr">
+           <widget class="QLineEdit" name="description">
             <property name="toolTip">
              <string>The internal name of the CRL in the database</string>
             </property>
