--- a/ui/ExportDialog.ui
+++ b/ui/ExportDialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>589</width>
-    <height>343</height>
+    <height>366</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -22,6 +22,7 @@
         <font>
          <family>Arial</family>
          <pointsize>14</pointsize>
+         <weight>50</weight>
          <italic>false</italic>
          <bold>false</bold>
          <underline>false</underline>
@@ -70,7 +71,7 @@
    <item>
     <layout class="QGridLayout" name="gridLayout">
      <item row="0" column="0">
-      <widget class="QLabel" name="TextLabel2">
+      <widget class="QLabel" name="descriptionLabel">
        <property name="text">
         <string>Name</string>
        </property>
@@ -84,7 +85,7 @@
       </widget>
      </item>
      <item row="1" column="0">
-      <widget class="QLabel" name="TextLabel14">
+      <widget class="QLabel" name="filenameLabel">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Minimum">
          <horstretch>0</horstretch>
@@ -113,6 +114,13 @@
       </widget>
      </item>
     </layout>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="separateFiles">
+     <property name="text">
+      <string>Each Item in a separate file</string>
+     </property>
+    </widget>
    </item>
    <item>
     <widget class="QGroupBox" name="groupBox">
